--- a/Timetable-Signage/Timetable-Signage.csproj
+++ b/Timetable-Signage/Timetable-Signage.csproj
@@ -75,7 +75,9 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <None Include="timetable.csv" />
+    <Content Include="timetable.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
